Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h


typedef void* INTPTR;

typedef char* PCHAR;


// Tipos de dados

typedef struct
{
	double ValorGT;
	char NumeroSerie[30];
	int CRO;
	int CNI;
	double DtHrAtualizado;
} TECFAutorizado;



// Funções

DllImport int AAC_AbrirArquivo(const INTPTR aacHandle);

DllImport int AAC_AtualizarValorGT(const INTPTR aacHandle, const PCHAR numSerie, double* grandTotal);

DllImport int AAC_Create(INTPTR* aacHandle);

DllImport int AAC_Destroy(INTPTR* aacHandle);

DllImport int AAC_GetUltimoErro(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_SalvarArquivo(const INTPTR aacHandle);

DllImport int AAC_VerificarGTECF(const INTPTR aacHandle, const PCHAR numSerie, double* grandTotal);